# commit-format

./: .commit-format  README.md  pyproject.toml  template.ini
.github/workflows/: commit-format.yml  markdownlint.yml  pylint.yml  release.yml
commit_format/: commit_format.py
